增加服务端图片托管与压缩并适配动图自动播放